--- a/OHET_Project/OHET_Project/Views/Heroes/Delete.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Delete.cshtml
@@ -4,64 +4,107 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<section id="three" class="wrapper style2">
+    <!-- TYTUŁ -->
+    <div class="inner">
+        <header class="align-center">
+            <p class="special">Are you sure you want to this amazing piece of imagination?</p>
+            <h2>Delete Character Sheet - @Html.DisplayFor(m => m.name)</h2>
+        </header>
+    </div>
+</section>
 
-<h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>Hero</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Concept.description)
-        </dt>
+    <section class="container">
+        <article class="half">
+            <h1>@Html.DisplayFor(m => m.name)</h1>
+            <h2 contenteditable="true">Drow Rogue Level @Html.DisplayFor(m => m.conceptLvl)</h2>
+            <p class="detail" style="text-align:center">@Html.DisplayFor(m => m.description)</p>
+            <div class="content">
+                <div class="main-cont cont">
+                    <form action="#" method="post" enctype="multipart/form-data">
 
-        <dd>
-            @Html.DisplayFor(model => model.Concept.description)
-        </dd>
+                        <div class="stats">
+                            <div>
+                                <label for="hitpoints">Hitpoints</label>
+                                <input type="number" id="hitpoints" class="inpt number" value="18">
+                            </div>
+                            <div>
+                                <label for="armor">Armor Class</label>
+                                <input type="number" name="armor" id="armor" class="inpt number" required="required" placeholder="0" value="15">
+                            </div>
+                            <div>
+                                <label for="speed">Speed</label>
+                                <input type="number" name="speed" id="speed" class="inpt number" required="required" placeholder="0" value="30">
+                            </div>
+                        </div>
+                        <hr>
+                        <div class="stats abilities">
+                            <div>
+                                <label for="str">STR</label>
+                                <div id="str" class="stat" contenteditable="true">@Html.DisplayFor(m => m.StrAttribute)</div>
+                            </div>
+                            <div>
+                                <label for="dex">DEX</label>
+                                <div id="dex" class="stat" contenteditable="true">@Html.DisplayFor(m => m.DexAttribute)</div>
+                            </div>
+                            <div>
+                                <label for="con">CON</label>
+                                <div id="con" class="stat" contenteditable="true">@Html.DisplayFor(m => m.ConAttribute)</div>
+                            </div>
+                        </div>
+                        <div class="stats abilities">
+                            <div>
+                                <label for="int">INT</label>
+                                <div id="int" class="stat" contenteditable="true">@Html.DisplayFor(m => m.IntAttribute)</div>
+                            </div>
+                            <div>
+                                <label for="wis">WIS</label>
+                                <div id="wis" class="stat" contenteditable="true">@Html.DisplayFor(m => m.WisAttribute)</div>
+                            </div>
+                            <div>
+                                <label for="cha">CHA</label>
+                                <div id="cha" class="stat" contenteditable="true">@Html.DisplayFor(m => m.ChaAttribute)</div>
+                            </div>
+                        </div>
+                        <hr>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Content.ApplicationUserId)
-        </dt>
+                        <div class="profs">
+                            <h3>Proficiencies <span class="detail">(+2 Proficiency Bonus)</span></h3>
 
-        <dd>
-            @Html.DisplayFor(model => model.Content.ApplicationUserId)
-        </dd>
+                            <ul>
+                                <li><span class="bold">Saving Throws</span> <span contenteditable="true">Dex +5, Int +3</span></li>
+                                <li><span class="bold">Skills</span><span contenteditable="true"> Deception +5, Insight +3, Investigation +3, Perception +5*, Persuasion +5, Sleight of Hand +5, Stealth +7*</span></li>
+                                <li><span class="bold">Tools</span> <span contenteditable="true">disguise kit, poisoner’s kit, thieves’ tools</span></li>
+                                <li><span class="bold">Armor</span> <span contenteditable="true">Light Armor (studded leather)</span></li>
+                                <li><span class="bold">Weapons</span> <span contenteditable="true">simple weapons, hand crossbows, longswords, rapiers, shortswords</span></li>
+                                <li><span class="bold">Senses</span> <span contenteditable="true">passive (Perception) 15</span></li>
+                                <li><span class="bold">Languages</span> <span contenteditable="true">Common, Elvish, Undercommon, thieves’ cant</span></li>
+                            </ul>
+                        </div>
+                    </form>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.name)
-        </dt>
+                </div>
+            </div>
+        </article>
+        <div class="half bg"></div>
+    </section>
 
-        <dd>
-            @Html.DisplayFor(model => model.name)
-        </dd>
+    @Scripts_()
+    @Styles_()
 
-        <dt>
-            @Html.DisplayNameFor(model => model.totalDR)
-        </dt>
+    @helper Styles_()
+    {
+        <link href="@Url.Content("~/Content/character_sheet.css")" rel="stylesheet" type="text/css" />
+    }
 
-        <dd>
-            @Html.DisplayFor(model => model.totalDR)
-        </dd>
+    @helper Scripts_()
+    {
+        <script src="@Url.Content("~/Scripts/character-sheet-scripts.js")"></script>
+    }
 
-        <dt>
-            @Html.DisplayNameFor(model => model.gold)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.gold)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.exp)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.exp)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
+    @using (Html.BeginForm())
+    {
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
