--- a/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Classes/Details.cshtml
@@ -9,6 +9,7 @@
 <div>
     <h4>Class</h4>
     <hr />
+    <img src='@Url.Action("Show", "Image", new { id = Model.IDClass })' />
     <dl class="dl-horizontal">
         <dt>
             @Html.DisplayNameFor(model => model.name)
