--- a/OHET_Project/OHET_Project/Views/Heroes/Details.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Details.cshtml
@@ -5,10 +5,9 @@
 }
 
 @{ 
-    var classElement = Model.classes.ElementAt(0);
     string style = "half0";
 
-    switch (classElement.name)
+    switch (Model.Class.name)
     {
         case "Warrior": style = "half0"; break;
         case "Rogue": style = "half1"; break;
@@ -33,7 +32,7 @@
 <section class="container">
     <article class="@style">
         <h1>@Html.DisplayFor(m => m.name)</h1>
-        <h2 contenteditable="true">Drow @classElement.name Level @Html.DisplayFor(m => m.conceptLvl)</h2>
+        <h2 contenteditable="true">Drow @Model.Class.name Level @Html.DisplayFor(m => m.conceptLvl)</h2>
         <p class="detail" style="text-align:center">@Html.DisplayFor(m => m.description)</p>
         <div class="content">
             <div class="main-cont cont">
