--- a/OHET_Project/OHET_Project/Views/Heroes/Index.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.description)
         </th>
         <th>
-            Class
+            @Html.DisplayNameFor(model => model.Class)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.gold)
@@ -30,6 +30,8 @@
     </tr>
 
 @foreach (var item in Model) {
+    if (@item.Content.ApplicationUserId == ViewBag.userId)
+    {
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.name)
@@ -44,6 +46,7 @@
         {
             <td>
                 @String.Join(" ", @item.description.Split().Take(20))
+                @Html.ActionLink("...", "Details", new { id = item.IDHero })
             </td>
         }
         <td>
@@ -61,6 +64,7 @@
             @Html.ActionLink("Delete", "Delete", new { id = item.IDHero })
         </td>
     </tr>
+    }
 }
 
 </table>
