--- a/OHET_Project/OHET_Project/Views/Heroes/Edit.cshtml
+++ b/OHET_Project/OHET_Project/Views/Heroes/Edit.cshtml
@@ -26,10 +26,66 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.totalDR, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.conceptLvl, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.totalDR, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.totalDR, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.conceptLvl, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.conceptLvl, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.description, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.description, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.description, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StrAttribute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.StrAttribute, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.StrAttribute, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DexAttribute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.DexAttribute, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.DexAttribute, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ConAttribute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.ConAttribute, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ConAttribute, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.IntAttribute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.IntAttribute, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IntAttribute, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.WisAttribute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.WisAttribute, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.WisAttribute, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.ChaAttribute, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EnumDropDownListFor(model => model.ChaAttribute, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.ChaAttribute, "", new { @class = "text-danger" })
             </div>
         </div>
 
@@ -50,18 +106,18 @@
         </div>
 
         <div class="form-group">
-            @Html.LabelFor(model => model.IDConcept, "IDConcept", htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.DropDownList("IDConcept", null, htmlAttributes: new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.IDConcept, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
             @Html.LabelFor(model => model.IDContent, "IDContent", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.DropDownList("IDContent", null, htmlAttributes: new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.IDContent, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.IDClass, "IDClass", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DropDownList("IDClass", null, htmlAttributes: new { @class = "form-control" })
+                @Html.ValidationMessageFor(model => model.IDClass, "", new { @class = "text-danger" })
             </div>
         </div>
 
