--- a/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
+++ b/OHET_Project/OHET_Project/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
 
     <!-- Header -->
     <header id="header" class="alt">
-        <div class="logo"><a href="index.html">OHET Legacy<span> by Marcin & Imran</span></a></div>
+        <div class="logo"><a href="@Url.Action("Index", "Home")">OHET Legacy<span> by Marcin & Imran</span></a></div>
         <a href="#menu">Menu</a>
     </header>
 
